@startuml

!define ENTITY class <<(E,#ADD1B2) Entity>>
!define SERVICE class <<(S,#FFD700) Service>>
!define CONTROLLER class <<(C,#90EE90) Controller>>
!define REPOSITORY interface <<(R,#FFB6C1) Repository>>

title Miltrain Application UML Diagram

entity User {
  - Long id
  - String name
  - Integer age
  - String login
  - Role role
  - String passwordHash
}

entity Training {
  - Long trainingId
  - Long userId
  - ExerciseType exerciseType
  - List<TrainingSet> sets
  + addSet(TrainingSet)
  + getTotalReps(): Integer
}

entity TrainingSet {
  - Long id
  - Integer reps
  - Training training
}

service UserService {
  - UserRepository userRepository
  - PasswordEncoder passwordEncoder
  + getUserById(Long): User
  + getUsers(): List<User>
  + updateUser(User): User
  + deleteUserById(Long): void
}

service TrainingService {
  - UserRepository userRepository
  - TrainingRepository trainingRepository
  + createTraining(CreateTrainingRequestDTO): Training
  + getTrainingById(Long): Training
  + getAllTrainingsByUser(Long): List<Training>
  + deleteTrainingById(Long): void
  + addSetToTraining(Long, Integer): void
}

controller TrainingController {
  - TrainingService trainingService
  + createTraining(CreateTrainingRequestDTO): ResponseEntity<Training>
  + addSet(Long, Integer): Training
  + getTrainingById(Long): Training
  + getAllTrainingsByUser(Long): List<Training>
  + deleteTrainingById(Long): ResponseEntity<DeleteResponse>
}

interface UserRepository {
  + findById(Long): Optional<User>
  + findAll(): List<User>
  + findByLogin(String): Optional<User>
  + deleteById(Long): void
  + save(User): User
}

interface TrainingRepository {
  + findById(Long): Optional<Training>
  + findAllByUserId(Long): List<Training>
  + deleteById(Long): void
  + save(Training): Training
}

' Relationships
Training "1" *-- "0..3" TrainingSet
TrainingService --> UserRepository
TrainingService --> TrainingRepository
UserService --> UserRepository
TrainingController --> TrainingService

@enduml